--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="fastbootd">Fastbootd</string>
     <string name="download">Download</string>
 
+    <string name="add_button">Add Button</string>
+
     <string name="blur_amount">0.2</string>
     <string name="dim_amount">0.5</string>
 </resources>
